--- a/javascript.html
+++ b/javascript.html
@@ -32,6 +32,10 @@ Don't want to take credit for it unfairly. Original template is here: http://sta
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="todo.js"></script>
+
+
 </head>
 
 <body>
@@ -65,95 +69,44 @@ Don't want to take credit for it unfairly. Original template is here: http://sta
           </div><!-- /.container-fluid -->
         </nav>
 
+
+
     <!-- Header -->
-    <header id="top" class="header">
+    <header id="top" class="header3">
         <div class="text-vertical-center">
-            <h1>World's greatest TA</h1>
-            <h3>Mauricio Campos</h3>
-            <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out Why</a>
+            <h1>Impressive!</h1>
+            <h2>Here's the checklist:</h2>
+                  <div class="row">
+                    <div class="col-xs-6 col-sm-6">
+                      <a href="#" class="thumbnail">At least three HTML pages</a>
+                    </div>
+                    <div class="col-xs-6 col-sm-6">
+                      <a href="#" class="thumbnail">Make use of best practices in modern web design</a>
+                    </div>
+
+
+
+                    <div class="col-xs-6 col-sm-6">
+                      <a href="#" class="thumbnail">Available via the public Internet using a custom domain name - MICHAELALLAN.ME</a>
+                    </div>
+
+                    <div class="col-xs-6 col-sm-6">
+                      <a href="#" class="thumbnail">Embed script from a third-party by researching their developer guidelines - YOUTUBE</a>
+                    </div>      
+                    <div class="col-xs-6 col-sm-6">
+                      <a href="#" class="thumbnail">A simple "list" application, where items can be removed from a list - YOU'RE LOOKING AT IT!</a>
+                    </div>    
+
+                    <div class="row">
+                       <a href="index.html" class="btn btn-dark btn-lg">Back home</a></P>
+                    </div> 
+
         </div>
     </header>
 
-    <!-- About -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Wow what a great looking site!</h2>
-                    <p class="lead">Clearly Michael deserves an A on it</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
-    <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Here's why Mauricio is a great TA:</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-check fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Accurate grading</strong>
-                                </h4>
-                                <p>Always 100 percent accurate. Always.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-clock-o fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>On-time delivery</strong>
-                                </h4>
-                                <p>Never misses a deadline for grading assignments</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-smile-o fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>100% satisfaction</strong>
-                                </h4>
-                                <p>Five star service</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
-    <!-- Callout -->
-    <aside class="callout">
-        <div class="text-vertical-center">
-            <h1>Wow!</h1>
-        </div>
-    </aside>
+
 
 
 
