--- a/video.html
+++ b/video.html
@@ -65,95 +65,21 @@ Don't want to take credit for it unfairly. Original template is here: http://sta
           </div><!-- /.container-fluid -->
         </nav>
 
+
+
     <!-- Header -->
-    <header id="top" class="header">
+    <header id="top" class="header2">
         <div class="text-vertical-center">
-            <h1>World's greatest TA</h1>
-            <h3>Mauricio Campos</h3>
+            <h1>Just kidding.</h1>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/oHg5SJYRHA0" frameborder="0" allowfullscreen></iframe>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out Why</a>
+            <a href="index.html" class="btn btn-dark btn-lg">Back home</a>
         </div>
     </header>
 
-    <!-- About -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Wow what a great looking site!</h2>
-                    <p class="lead">Clearly Michael deserves an A on it</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
-    <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Here's why Mauricio is a great TA:</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-check fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Accurate grading</strong>
-                                </h4>
-                                <p>Always 100 percent accurate. Always.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-clock-o fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>On-time delivery</strong>
-                                </h4>
-                                <p>Never misses a deadline for grading assignments</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-smile-o fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>100% satisfaction</strong>
-                                </h4>
-                                <p>Five star service</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
-    <!-- Callout -->
-    <aside class="callout">
-        <div class="text-vertical-center">
-            <h1>Wow!</h1>
-        </div>
-    </aside>
+
 
 
 
